--- a/src/index.css
+++ b/src/index.css
@@ -508,10 +508,14 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
 
 
 @media (max-width:600px) {
+  .navbar{
+    justify-content: center;
+    gap: 10px;
+  }
   .links{     
     display: none;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
   
   }
   .burger{
@@ -560,13 +564,13 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
     
   }
   .technology_sec{
-    top: 570%;
+    top: 580%;
   }
   .sec{
     background-color: #fff;
   }
   .i_line{
-    top:700%;
+    top:720%;
   }
   .skill{
     top:730%;
@@ -575,7 +579,7 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
     background-color: #fff;
   }
   .footer{
-    top: 830%;
+    top: 850%;
   }
   .fcontent{
     flex-direction: column;
@@ -600,7 +604,7 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
     color: #000;
   }
   .pro{
-    top: 340%;
+    top: 350%;
   }
 }
 @media (max-width:400px) {
