--- a/src/index.css
+++ b/src/index.css
@@ -509,8 +509,8 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
 
 @media (max-width:600px) {
   .navbar{
-    justify-content: space-around;
-  padding: 0px 0px;
+    justify-content: flex-start;
+  gap: 10px;
 
   }
   .links{     
@@ -520,7 +520,7 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
   
   }
   .social_links {
-    gap: 3px;
+    gap: 12px;
   }
   .burger{
     display: block;
@@ -577,7 +577,7 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
     top:740%;
   }
   .skill{
-    top:770%;
+    top:780%;
   }
   .skill_container{
     background-color: #fff;
