--- a/src/index.css
+++ b/src/index.css
@@ -510,7 +510,7 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
 @media (max-width:600px) {
   .navbar{
     justify-content: flex-start;
-  gap: 10px;
+  gap: 20px;
 
   }
   .links{     
@@ -619,6 +619,9 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
   }
 }
 @media (max-width:400px) {
+  body{
+    overflow-x: hidden;
+  }
   .social_links{
     gap: 2px;
   }
