--- a/src/index.css
+++ b/src/index.css
@@ -623,6 +623,9 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
     width: 100vw;
     overflow-x: hidden;
   }
+  .container{
+    overflow-x: hidden;
+  }
   .social_links{
     gap: 2px;
   }
