--- a/src/index.css
+++ b/src/index.css
@@ -625,6 +625,7 @@ transition: cubic-bezier(0.19, 1, 0.22, 1)1s;
   }
   .container{
     overflow-x: hidden;
+    width: 100vw;
   }
   .social_links{
     gap: 2px;
