--- a/src/components/contect.css
+++ b/src/components/contect.css
@@ -94,6 +94,7 @@ input[type="email"]{
     .contect{
         flex-direction: column;
         padding: 10px;
+        border-top-right-radius: 30px;
     }
     .left_contect{
         width: 100%;
