--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -81,7 +81,7 @@ font-family: "Arya", sans-serif;
     width: 50px;
     height: 50px;
     background-color: black;
-    position: fixed;
+    position: absolute;
     top: 4%;
     right: 2%;
    
