--- a/src/components/project.css
+++ b/src/components/project.css
@@ -53,7 +53,7 @@
   text-align: center;
 
 }
-.projects_box button{
+.projects_box a{
     font-family: "Arya", sans-serif;
     font-weight: 400;
     font-size: 20px;
@@ -66,7 +66,7 @@
 
 
 }
-.projects_box button::before{
+.projects_box a::before{
     content: "";
     width: 0%;
     height: 100%;
@@ -80,10 +80,10 @@
 
 
 }
-.projects_box button:hover::before{
+.projects_box a:hover::before{
     width: 100%;
 }
-.projects_box button:hover{
+.projects_box a:hover{
     color:#fff;
 }
 @media (max-width:480px) {
